<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#FFF"
    android:orientation="vertical"
    >

  <RelativeLayout
      android:id="@+id/progressBar"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="100dp"
      android:visibility="gone"
      >

    <ProgressBar
        android:id="@+id/progressBarBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyleLarge"
        />

    <TextView
        android:id="@+id/progressBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarBar"
        android:layout_centerHorizontal="true"
        android:padding="25dp"
        android:text="@string/loading_content"
        android:textColor="?attr/colorPrimary"
        />

  </RelativeLayout>

  <RelativeLayout
      android:id="@+id/errorLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="100dp"
      android:visibility="invisible"
      >

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/duplicated_apk"
        android:textAlignment="center"
        android:textSize="16dp"
        />

    <Button
        android:id="@+id/okErrorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorMessage"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/OK"
        android:visibility="visible"
        />

  </RelativeLayout>


  <Button
      android:id="@+id/submit_app_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginLeft="@dimen/sideMargin"
      android:layout_marginRight="@dimen/sideMargin"
      android:text="@string/submit"
      android:textColor="#FFFFFF"
      style="@style/Buttonuploader_button_theme"
      />

  <ScrollView
      android:id="@+id/submit_app_content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@id/submit_app_button"
      android:scrollbarAlwaysDrawVerticalTrack="true"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/app_name_form"
          style="@style/TextViewCustom"
          />

      <EditText
          android:id="@+id/appName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textCursorDrawable="@null"
          android:layout_marginLeft="@dimen/sideMargin"
          android:layout_marginRight="@dimen/sideMargin"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/age_rating"
          style="@style/TextViewCustom"
          />

      <Spinner
          android:id="@+id/age_rating_spinner"

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/sideMargin"
          android:layout_marginRight="@dimen/sideMargin"
          android:layout_marginTop="10dp"
          android:background="@drawable/spinner_toggle_on_normal_holo_light"
          android:padding="10dp"
          android:spinnerMode="dropdown"

          >
      </Spinner>


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/app_category"
          style="@style/TextViewCustom"
          />


      <Spinner
          android:id="@+id/app_category_spinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/sideMargin"
          android:layout_marginRight="@dimen/sideMargin"
          android:layout_marginTop="10dp"
          android:background="@drawable/spinner_toggle_on_normal_holo_light"
          >
      </Spinner>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/language"
          style="@style/TextViewCustom"
          />

      <Spinner
          android:id="@+id/app_language"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/sideMargin"
          android:layout_marginRight="@dimen/sideMargin"
          android:layout_marginTop="10dp"
          android:background="@drawable/spinner_toggle_on_normal_holo_light"
          >
      </Spinner>


      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            style="@style/TextViewCustom"
            />

      </LinearLayout>

      <ScrollView
          android:id="@+id/scroll_description"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:layout_marginLeft="@dimen/sideMargin"


          android:layout_marginRight="@dimen/sideMargin"
          android:background="@drawable/btn_toggle_on_normal_holo_light"

          >


        <EditText
            android:id="@+id/app_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@null"
            android:gravity="start"
            android:minHeight="200dp"
            android:textCursorDrawable="@null"
            android:textColor="#ff818181"
            />
      </ScrollView>


      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            style="@style/TextViewCustom"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/optional"
            android:textColor="@android:color/darker_gray"
            style="@style/TextViewCustom"
            />
      </LinearLayout>

      <EditText

          android:id="@+id/phone_number"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textCursorDrawable="@null"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            style="@style/TextViewCustom"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/optional"
            android:textColor="@android:color/darker_gray"
            style="@style/TextViewCustom"
            />
      </LinearLayout>

      <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textCursorDrawable="@null"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            style="@style/TextViewCustom"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/optional"
            android:textColor="@android:color/darker_gray"
            style="@style/TextViewCustom"
            />
      </LinearLayout>

      <EditText
          android:id="@+id/website"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textCursorDrawable="@null"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          />


    </LinearLayout>

  </ScrollView>

</RelativeLayout>